# anony-box-backbone

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  diesel.toml
database/: AnonymousChatDB.sql
doc/: AnonymousChatBoxDesign.drawio  AnonymousChatDatabase.drawio  HandleChatSocket.drawio  Presentation  README.md  RealTimeChatFeature.drawio  SystemArchitecture.drawio  TechnologiesAndLibraries.drawio
doc/api_specs/: AnonymousChatBoxDesign.drawio
migrations/2024-10-21-062600_create_initial_tables/: down.sql  up.sql
migrations/2024-10-26-create-messages-text/: down.sql  up.sql
migrations/2024-10-31-add_id_column_to_wating_list_and_participants/: down.sql  up.sql
migrations/2024-11-08-add_uuid_to_message/: down.sql  up.sql
migrations/2024-11-16-add_updated_at_column_to_messages/: down.sql  up.sql
migrations/2024-11-16-drop_table_message_text/: down.sql  up.sql
migrations/2024-11-20-add-status-column-to-messages/: down.sql  up.sql
migrations/2024-12-08-modify_attchment_column_properties_and_attachment_type/: down.sql  up.sql
src/: errors.rs  extractors.rs  handlers.rs  main.rs  msg_handlers.rs  router.rs  schema.rs  user_handlers.rs
src/database/: models.rs  schema.rs
src/handlers/: common.rs  file.rs  group.rs  message.rs  mod.rs  socket.rs  user.rs
src/handlers/socket/: connections.rs  handler.rs  mod.rs  structs.rs
src/payloads/: common.rs  groups.rs  messages.rs  minors.rs  mod.rs  user.rs
src/payloads/socket/: SocketMessageTypes.md  common.rs  message.rs
src/services/: attachment.rs  group.rs  message.rs  mod.rs  user.rs
src/utils/: constants.rs  crypto.rs  custom_serde.rs  minors.rs  mod.rs
