[package]
name = "anony-box-backbone"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
axum = "0.7.7"
r2d2 = "0.8.10"
diesel = { version = "2.2.4", features = ["postgres", "r2d2", "chrono"] }
chrono = "0.4.38"
dotenvy = "0.15.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
digest = "0.10.7"
sha2 = "0.10.8"
rand = "0.8"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}