[package]
name = "anony-box-backbone"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6", features = ["timeout", "trace", "cors"] }
axum = {version = "0.7.7", features = ["tracing", "ws"]}
axum-extra = {version = "0.9.4", features = ["cookie", "typed-header"]}
futures = "0.3"
r2d2 = "0.8.10"
diesel = { version = "2.2.4", features = ["postgres", "r2d2", "chrono", "uuid"] }
time = "0.3.36"
chrono = "0.4.38"
dotenvy = "0.15.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
digest = "0.10.7"
sha2 = "0.10.8"
rand = "0.8"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
utoipa = "5.1.3"
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
uuid = {version = "1.11.0", features = ["serde", "v4"]}

