[package]
name = "anony-box-backbone"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = {version = "0.7.12", features = ["io"]}
tower-http = { version = "0.6.2", features = ["timeout", "trace", "cors", "fs"] }
axum = {version = "0.7.9", features = ["tracing", "ws"]}
axum-extra = {version = "0.9.6", features = ["cookie", "typed-header"]}
futures = "0.3"
r2d2 = "0.8.10"
diesel = { version = "2.2.4", features = ["postgres", "r2d2", "chrono", "uuid"] }
time = "0.3.36"
chrono = "0.4.38"
dotenvy = "0.15.7"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
digest = "0.10.7"
sha2 = "0.10.8"
rand = "0.8"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
utoipa = {version = "5.2.0", features = ["uuid", "chrono"]}
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
uuid = {version = "1.11.0", features = ["serde", "v4"]}
once_cell = "1.20"
md5 = "0.7"
